Corrected header wrapping element

--- a/style/aboutUs.css
+++ b/style/aboutUs.css
@@ -43,7 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 100%;
     min-width: 25%;
     height: auto;
@@ -57,6 +57,15 @@
 .header a {
     text-decoration: none;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     color: white;
+}
+
+.get-started {
+    background-color: rgb(245, 187, 41);
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-width: 0;
+    border-radius: 20px;
 }
